--- a/Gifer/CSS/responsive.css
+++ b/Gifer/CSS/responsive.css
@@ -1,359 +1,610 @@
-@media (max-width:1440px) {
-    .generator {
-        width: 500px;
-    }
-
-    #search-bar {
-        width: 400px;
-    }
-
-    .gen-btn {
-        width: 450px;
-    }
-
-    .mini-container {
-        height: 40%;
-        width: 40%;
-    }
-
-    .mini-container2 {
-        height: 350px;
-    }
-
-    .sample {
-        width: 300px;
-    }
-
-    .about-container-img {
-        width: 400px;
-        height: inherit;
-    }
-
-    .social {
-        margin: 14px auto;
-    }
+* {
+    box-sizing: border-box;
+    margin: 0;
 }
 
-@media (max-width:1024px) {
-    ul li a {
-        margin-right: 75px;
-        font-size: 18px;
-    }
-
-    .landing {
-        flex-direction: column;
-        flex-wrap: unset;
-    }
-
-    .generator {
-        width: 600px;
-        margin: 50px auto;
-    }
-
-    .gifs {
-        margin: 50px auto;
-    }
-
-    .about-container-p {
-        margin: 100px;
-    }
-
-    footer {
-        margin-top: 100px;
-    }
-}
-
-@media (max-width:768px) {
-    ul li a {
-        margin-right: 32px;
-        font-size: 16px;
-    }
-
-    header img {
-        height: 110px;
-        margin: 25px;
-    }
-
-    .gifs {
-        width: fit-content;
-    }
+body {
+    background: rgba(0, 0, 0, 0.7) url("https://developers.giphy.com/branch/master/static/api-512d36c09662682717108a38bbb5c57d.gif");
+    background-size: contain;
+    background-blend-mode: darken;
+    font-family: 'Open Sans', sans-serif;
 }
 
 
+body ::selection {
+    color: #2E0249;
+    background-color: #F806CC;
+}
 
-@media (max-width: 450px) {
-    body {
-        background:rgba(0, 0, 0, 0.7) url("https://developers.giphy.com/branch/master/static/api-512d36c09662682717108a38bbb5c57d.gif");
-        background-blend-mode: darken;
-    }
-    
-    ul {
-        display: block;
-        margin-top: 24px;
-    }
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 
-    ul li a {
-        color: white;
-        padding-bottom: 12px;
-        font-size: 16px;
-        margin-right: 0;
-    }
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 24px;
+}
 
-    header img {
-        height: 126px;
-    }
+header img {
+    height: 150px;
+    margin: 25px;
+}
 
-    .decription p {
-        font-size: 14px;
-        width: 90%;
-    }
+ul {
+    list-style: none;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
 
-    .decription h1 {
-        font-size: 36px;
-    }
+ul li a {
+    color: white;
+    margin-right: 124px;
+    padding-bottom: 12px;
+    font-size: 28px;
+    display: inline-block;
+    text-decoration: none;
+    letter-spacing: 1px;
+    transition: .3s;
+}
 
-    .apiGif img {
-        height: 225px;
-        margin: 0;
-        margin-top: 50px;
-    }
+ul li a:hover {
+    color: #A91079;
+    border-bottom: solid 2px #A91079;
+    cursor: pointer;
+}
 
-    .landing {
-        width: fit-content;
-    }
+.landing {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    height: fit-content;
+    margin-top: 50px;
+}
 
-    .generator {
-        margin: 16px;
-        height: 675px;
-        width: fit-content;
-        border: none;
-    }
+.apiGif img {
+    height: 500px;
+    border-radius: 12px;
+    margin-right: 24px;
+}
 
-    .generator h2 {
-        font-size: 20px;
-    }
+.decription h1 {
+    color: whitesmoke;
+    letter-spacing: 2px;
+    font-size: 50px;
+}
 
-    #catarogies {
-        flex-wrap: wrap;
-        width: inherit;
-        margin-top: 24px;
-        height: 50px;
-    }
+.decription p {
+    font-size: 16px;
+    line-height: 32px;
+    letter-spacing: 2px;
+}
 
-    .type {
-        border: solid 2px #A91079;
-        width: 100px;
-        height: inherit;
-        z-index: 10;
-    }
+.generator {
+    margin-left: 40px;
+    height: 650px;
+    width: 600px;
+    border: none;
+    border-radius: 8px;
+    background: rgba(0, 0, 0, 0.4) linear-gradient(to top, #2E0249, #570A57);
+    background-blend-mode: darken;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
 
-    .size {
-        margin-top: 100px;
-    }
+.generator h2 {
+    color: white;
+    font-weight: 400;
+    letter-spacing: 1px;
+    padding: 12px;
+    padding-top: 24px;
+    display: inline-block;
+}
 
-    .sample {
-        width: 375px;
-        height: 75%;
-    }
+#catarogies {
+    display: flex;
+    justify-content: space-around;
+    flex-grow: 3;
+    flex-basis: 2;
+    flex-shrink: 2;
+    align-items: center;
+    width: inherit;
+    margin-top: 24px;
+    height: 50px;
+}
 
-    .size select {
-        width: 200px;
-        height: 32px;
-        margin-left: 0;
-    }
+.type {
+    border: solid 2px #A91079;
+    width: 100px;
+    height: inherit;
+    text-align: center;
+    transition: 0.3s;
+    color: white;
+    padding: 12px;
+}
 
-    .count {
-        flex-wrap: wrap;
-        width: 200px;
-        margin-left: 16px;
-        margin-top: 16px;
-    }
+.type:hover {
+    background-color: #A91079;
+    border: none;
+    cursor: pointer;
+}
 
-    #search-bar {
-        font-size: 14px;
-        width: 320px;
-        padding: 16px;
-        border-radius: 8px;
-        margin-left: 8px;
-    }
+.active {
+    background-color: #A91079;
+    border: none;
+}
 
-    .gen-btn {
-        width: 350px;
-    }
+.search {
+    margin-top: 64px;
+    display: inline-block;
+    position: relative;
+}
 
-    .gifs {
-        width: fit-content;
-        margin: 0;
-        margin-top: 100px;
-    }
+#search-bar {
+    font-size: 16px;
+    width: 500px;
+    padding: 16px;
+    margin-left: 8px;
+    background: transparent;
+    border: none;
+    border-bottom: solid 1px #A91079;
+    color: white;
+    transition: .3s;
+}
 
-    .mini-container {
-        width: 100%;
-    }
+#search-bar:focus {
+    border: solid #A91079 1px;
+}
 
-    .gif {
-        height: 75%;
-        width: 100%;
-        border-radius: 6px;
-        transition: .3s;
-    }
-    
-    #q-mark {
-        display: none;
-    }
-    
-    #gen-discover {
-        width: fit-content;
-    }
+#search-bar:visited {
+    border: solid #A91079 1px;
+}
 
-    .mini-container2 {
-        padding: 0;
-    }
+.size {
+    margin-top: 64px;
+    display: inline-block;
+}
 
-    
-    #about {
-        width: 450px;
-        padding: 12px;
-    }
+.size select {
+    width: 250px;
+    height: 32px;
+    margin-left: 32px;
+    background: transparent;
+    color: white;
+    border: solid 2px #A91079;
+    cursor: pointer;
+}
 
-    .about-container {
-        width: fit-content;
-        height: inherit;
-        padding-bottom: 32px;
-    }
+.size option {
+    color: black;
+    font-weight: 400;
+    cursor: pointer;
+}
 
-    .about-container-p {
-        width: 400px;
-        height: inherit;
-        margin: 12px;
-    }
-    
-    .about-container-img {
-        width: 400px;
-        height: inherit;
-    }
-    
-    .about-container-p p {
-        color: #d0d6f9;
-        letter-spacing: 1px;
-        font-size: 18px;
-        line-height: 32px;
-        font-weight: 400;
-        text-align: left;
-        padding-bottom: 32px;
-        padding-top: 32px;
-    }
-    
-    .inabout {
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        flex-wrap: wrap;
-        margin-top: 75px;
-    }
-    
-    .about-container-img img {
-        width: 100%;
-        height: fit-content;
-        border-radius: 4px;
-        transition: .3s;
-        margin: 0;
-    }
-    
-    .about-container-img img:hover {
-        opacity: 0.6;
-    }
-    
-    .about-container h1 {
-        color: white;
-        display: inline-block;
-        letter-spacing: 5px;
-        font-size: 45px;
-        font-weight: bold;
-        transition: .3s;
-    }
-    
-    .about-container h1:hover {
-        color: #A91079;
-        cursor: unset;
-    }
-    
-    .about-container a {
-        color: #A91079;
-        text-decoration: none;
-    }
- 
-    #contact {
-        margin-top: 300px;
-        height: fit-content;
-    }
+.numbers {
+    display: flex;
+    margin-top: 64px;
+}
 
-    .special-heading {
-        color: white;
-        font-size: 64px;
-        padding: 24px;
-        margin-left: 0;
-    }
+.count {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 200px;
+    margin-left: 50px;
+    margin-top: 16px;
+}
 
-    #stp {
-        color: #a91079;
-        font-size: 32px;
-        text-align: center;
-        padding: 16px;
-        margin: 0;
-        width: 100%;
-        margin-top: 50px;
-        border: none;
-    }
+.count input {
+    text-align: center;
+    font-size: 16px;
+    font-weight: bold;
+    border: none;
+    background: transparent;
+    color: white;
+}
 
-    .mail {
-        margin: 45px;
-    }
+.count i {
+    font-size: 24px;
+    color: #F806CC;
+    cursor: pointer;
+}
 
-    .mail h1 {
-        color: #d0d6f9;
-        padding: 24px;
-        text-align: center;
-        font-size: 14px;
-    }
+.count i:hover {
+    opacity: 0.7;
+}
 
-    .mail address a {
-        color: #d0d6f9;
-        text-align: center;
-        text-decoration: none;
-        display: block;
-        font-size: 24px;
-        letter-spacing: 3px;
-        font-style: normal;
-        transition: .3s;
-    }
+.btn {
+    display: block;
+    margin-top: 64px;
+    text-align: center;
+}
 
-    
-    .mail p {
-        color: #d0d6f9;
-        font-size: 18px;
-        text-align: center;
-        padding: 32px;
-        font-weight: bold;
-    }
+.gen-btn:hover {
+    opacity: 0.8;
+    cursor: pointer;
+}
+
+.gen-btn {
+    z-index: 1;
+    position: relative;
+    font-size: inherit;
+    font-family: inherit;
+    color: white;
+    outline: none;
+    border: none;
+    border-radius: 8px;
+    background-color: #A91079;
+    width: 550px;
+    padding: 16px;
+    letter-spacing: 1px;
+    font-weight: bold;
+    transition: 0.3s;
+}
+  
+.gen-btn:hover {
+    cursor: pointer;
+}
+  
+.gen-btn::before {
+    content: '';
+    z-index: -1;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    border: 4px solid #A91079;
+    border-radius: 8px;
+    transform-origin: center;
+    transform: scale(1);
+}
+  
+.gen-btn:hover::before {
+    transition: all 0.75s ease-in-out;
+    transform-origin: center;
+    transform: scale(1.3);
+    opacity: 0;
+}
+
+#q-mark {
+    text-align: center;
+    margin-left: 32px;
+    font-size: 24px;
+    cursor: help;
+    color: #A91079;
+}
+
+.gifs {
+    height: 650px;
+    width: 800px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    margin-right: 40px;
+    border-radius: 8px;
+    position: relative;
+    overflow-y: scroll;
+}
+
+::-webkit-scrollbar {
+    width: 16px;
+    transition: .3s;
+  }
+
+.gifs::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 10px #F806CC; 
+    border-radius: 8px;
+}
+   
+.gifs::-webkit-scrollbar-thumb {
+    background: #A91079; 
+    border-radius: 8px;
+    transition: .3s;
+}
+  
+::-webkit-scrollbar-thumb:hover {
+    opacity: 0.5;
+    cursor: pointer;
+}
+
+.mini-container {
+    height: 50%;
+    width: 50%;
+    display: flex;
+    padding: 8px;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.gif {
+    height: 90%;
+    width: 100%;
+    border-radius: 6px;
+    transition: .3s;
+}
+
+.gif:hover {
+    opacity: 0.6;
+    cursor: pointer;
+}
+
+.actions {
+    height: fit-content;
+    width: 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 12px;
+    cursor: pointer;
+}
+
+.actions-ico {
+    height: 32px;
+    transition: .3s;
+}
+
+.actions-ico:hover {
+    opacity: 0.5;
+}
 
 
-    .social {
-        height: fit-content;
-        width: 250px;
-        display: flex;
-        justify-content: space-evenly;
-        align-items: center;
-        text-align: center;
-    }
+#gen-discover {
+    margin-top: 300px;
+    height: fit-content;
+}
 
-    footer {
-        margin-top: 300px;
-        background-color: #570a57;
-        padding: 1px;
-    }
+#gen-discover h2 {
+    color: white;
+    letter-spacing: 1px;
+    font-weight: bold;
+    padding-bottom: 32px;
+    transition: 0.3s;
+    text-align: center;
+}
 
-    footer h1 {
-        font-size: 14px;
-    }
+#gen-discover h2:hover {
+    color: #A91079;
+    cursor: unset;
+}
+
+.samples {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.mini-container2 {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 450px;
+    flex-direction: column;
+    padding: 24px;
+}
+
+.sample {
+    width: 400px;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 8px;
+    transition: .3s;
+}
+
+.samples i {
+    font-size: 32px;
+    margin: 12px;
+    color: #A91079;
+    transition: .3s;
+}
+
+.samples i:hover {
+    color: #F806CC;
+    cursor: pointer;
+}
+.sample:hover {
+    opacity: 0.6;
+    cursor: pointer;
+}
+
+#about {
+    margin-top: 300px;
+    height: fit-content;
+}
+
+.about-container-p {
+    width: 850px;
+    height: inherit;
+}
+
+.about-container-img {
+    width: 500px;
+    height: inherit;
+}
+
+.about-container-p p {
+    color: #d0d6f9;
+    letter-spacing: 1px;
+    font-size: 18px;
+    line-height: 32px;
+    font-weight: 400;
+    text-align: left;
+    padding-bottom: 32px;
+    padding-top: 32px;
+}
+
+.about-container-p a {
+    color: #F806CC;
+}
+
+.about-container-p a:hover {
+    color: #d0d6f9;
+    opacity: 0.8;
+}
+
+.about-container-p hr {
+    padding: 0;
+    background: #a91079;
+    width: auto;
+    border: solid 1px #a91079;
+}
+
+.inabout {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-top: 75px;
+}
+
+.about-container-img img {
+    width: 100%;
+    height: fit-content;
+    border-radius: 4px;
+    transition: .3s;
+    margin: 0;
+}
+
+.about-container-img img:hover {
+    opacity: 0.6;
+}
+
+.about-container h1 {
+    color: white;
+    display: inline-block;
+    letter-spacing: 5px;
+    font-size: 45px;
+    font-weight: bold;
+    transition: .3s;
+}
+
+.about-container h1:hover {
+    color: #A91079;
+    cursor: unset;
+}
+
+.about-container a {
+    color: #A91079;
+    text-decoration: none;
+}
+
+.about-container a:hover {
+    color: #F806CC;
+    text-decoration: underline;
+}
+
+#contact {
+    margin-top: 300px;
+    height: fit-content;
+}
+
+.special-heading {
+    color: white;
+    font-size: 64px;
+    padding: 24px;
+    text-align: center;
+    letter-spacing: 3px;
+    transition: .3s;
+}
+.special-heading:hover {
+    color: #A91079;
+    cursor: unset;
+}
+
+#stp {
+    color: #a91079;
+    font-size: 32px;
+    text-align: center;
+    padding: 16px;
+    border-bottom: solid #a91079 2px;
+    display: block;
+    width: fit-content;
+    margin: 14px auto;
+}
+
+.mail h1 {
+    color: #d0d6f9;
+    padding: 24px;
+    text-align: center;
+}
+
+.mail address a {
+    color: #d0d6f9;
+    text-align: center;
+    text-decoration: none;
+    display: block;
+    font-size: 24px;
+    letter-spacing: 3px;
+    font-style: normal;
+    transition: .3s;
+    font-weight: bold;
+}
+
+.mail address a:hover {
+    color: #F806CC;
+}
+
+.mail p {
+    color: #d0d6f9;
+    font-size: 18px;
+    text-align: center;
+    padding: 32px;
+    font-weight: bold;
+}
+
+.social {
+    height: fit-content;
+    width: 250px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    text-align: center;
+    margin: 16px auto;
+}
+
+.social i {
+    font-size: 32px;
+    color: #A91079;
+    transition: .3s;
+}
+
+.social i:hover {
+    color: #d0d6f9;
+    cursor: pointer;
+}
+
+footer {
+    margin-top: 300px;
+    background-color: #570a57;
+    padding: 2px;
+}
+
+footer h1 {
+    text-align: center;
+    color: #d0d6f9;
+    font-size: 16px;
+    padding: 16px;
+    text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
+             0px 8px 13px rgba(0,0,0,0.1),
+             0px 18px 23px rgba(0,0,0,0.1);
+}
+
+.alert_btn {
+    width: 100px;
+    font-weight: bold;
+    border: none;
+    letter-spacing: 1px;
+}
+
+.tippy-box[data-theme~="tippy"] {
+    border: none;
+    font-size: 12px;
 }
